crates/cb-sema/tests/snapshots/lower_snapshots__repeat_forever_break_continue.snap
---
source: crates/cb-sema/tests/lower_snapshots.rs
expression: ir
---
fn @main() -> Void {
  locals:
    local0: i (Int)

  bb0:
    goto bb1
  bb1:
    r0 = load_local local0
    r1 = const_int 1
    r2 = add r0, r1
    store_local local0, r2
    r3 = load_local local0
    r4 = const_int 3
    r5 = eq r3, r4
    branch_if r5, bb4, bb3
  bb2:
    return
  bb3:
    r6 = load_local local0
    r7 = const_int 5
    r8 = eq r6, r7
    branch_if r8, bb6, bb5
  bb4:
    goto bb1
  bb5:
    goto bb1
  bb6:
    goto bb2
}
