crates/cb-sema/tests/snapshots/lower_snapshots__repeat_while_break_continue.snap
---
source: crates/cb-sema/tests/lower_snapshots.rs
expression: ir
---
fn @main() -> Void {
  locals:
    local0: i (Int)

  bb0:
    goto bb1
  bb1:
    r0 = load_local local0
    r1 = const_int 1
    r2 = add r0, r1
    store_local local0, r2
    r3 = load_local local0
    r4 = const_int 3
    r5 = eq r3, r4
    branch_if r5, bb5, bb4
  bb2:
    r9 = load_local local0
    r10 = const_int 10
    r11 = lt r9, r10
    branch_if r11, bb1, bb3
  bb3:
    return
  bb4:
    r6 = load_local local0
    r7 = const_int 9
    r8 = eq r6, r7
    branch_if r8, bb7, bb6
  bb5:
    goto bb2
  bb6:
    goto bb2
  bb7:
    goto bb3
}
