crates/cb-sema/tests/snapshots/lower_snapshots__runtime_function_call.snap
---
source: crates/cb-sema/tests/lower_snapshots.rs
expression: ir
---
fn @main() -> Void {
  bb0:
    r0 = const_string "hello world"
    r1 = call print, r0
    return
}
