crates/cb-sema/tests/snapshots/lower_snapshots__short_circuit_or.snap
---
source: crates/cb-sema/tests/lower_snapshots.rs
assertion_line: 451
expression: ir
---
fn @main() -> Void {
  locals:
    local0: a (Int)
    local1: b (Int)
    local2: @sc_0 (Int)

  bb0:
    r0 = load_local local0
    branch_if r0, bb4, bb3
  bb1:
    return
  bb2:
    r4 = const_int 1
    store_local local0, r4
    goto bb1
  bb3:
    r2 = load_local local1
    store_local local2, r2
    goto bb5
  bb4:
    r1 = const_int 1
    store_local local2, r1
    goto bb5
  bb5:
    r3 = load_local local2
    branch_if r3, bb2, bb1
}
