crates/cb-sema/tests/snapshots/lower_snapshots__string_concat_mixed.snap
---
source: crates/cb-sema/tests/lower_snapshots.rs
assertion_line: 40
expression: ir
---
fn @main() -> Void {
  locals:
    local0: x (String)

  bb0:
    r0 = const_string "count: "
    r1 = const_int 42
    r2 = convert r1: Int -> String
    r3 = str_concat r0, r2
    store_local local0, r3
    return
}
